# baily.chat

client/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
client/src/: apollo.tsx  index.tsx  messages.module.css  messages.test.tsx  messages.tsx
server/: Cargo.toml  build.rs
server/proto/: chat.proto
server/src/: main.rs
