[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3.24"
tokio-stream = "0.1.11"
async-graphql = "4.0"
axum = { version = "0.5.1", features = ["ws", "headers"] }
hyper = "0.14"
async-graphql-axum = "4.0.15"
tower-http = { version = "0.1.2", features = ["cors","trace"] }

[build-dependencies]
tonic-build = "0.8"
